<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        
        <TextView android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/file_name"/>
        
        <EditText android:id="@+id/name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:background="@drawable/bg_edittext"  
            android:padding="5dp" 
            android:hint="@string/file_name_tip"/>
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        
        <TextView android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/ratio"/>
        
        <EditText android:id="@+id/ratio_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:background="@drawable/bg_edittext" 
            android:padding="5dp" 
            android:hint="@string/ratio_tip"/>
        
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        
        <TextView android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/file_size"/>
        
        <EditText android:id="@+id/size_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:background="@drawable/bg_edittext" 
            android:padding="5dp"  
            android:hint="@string/file_size_tip"/>
        
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">
        
        <View android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

	    <Button 
	        android:id="@+id/choose_btn"
	        android:layout_weight="2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/choose"/>

	    <View android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

	    <Button 
	        android:id="@+id/zip_btn"
	        android:layout_weight="2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/zip"/>
	    
        <View android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>

</LinearLayout>
